--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -43,19 +43,13 @@ jobs:
         directory: .
         framework: terraform
         soft_fail: true
-       continue-on-error: true
+       continue-on-error: false
  
      - name: Terraform plan
        id: plan
        run: terraform plan
-       continue-on-error: true
+       continue-on-error: false
     
      - name: Terraform Plan Status
        if: steps.plan.outcome == 'failure'
        run: exit 1
- 
-     - name: Terraform Apply
-       run: terraform apply -auto-approve -input=false
-
-     - name: Terraform Destroy
-       run: terraform destroy -auto-approve -input=false
