--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -37,12 +37,12 @@ jobs:
         directory: .
         framework: terraform
         soft_fail: true
-       continue-on-error: true
+       continue-on-error: false
  
      - name: Terraform plan
        id: plan
        run: terraform plan
-       continue-on-error: true
+       continue-on-error: false
     
      - name: Terraform Plan Status
        if: steps.plan.outcome == 'failure'
