--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -1,4 +1,4 @@
-name: "Terraform with Checkov - Security Scan and Deploy"
+name: "Terraform with Checkov - Security Scan and Apply"
  
 on:
  workflow_dispatch:
@@ -9,7 +9,7 @@ env:
 
 jobs:
  terraform:
-   name: "Terraform with Checkov - Security Scan and Deploy"
+   name: "Terraform with Checkov - Security Scan and Apply"
    runs-on: ubuntu-latest
    defaults:
      run:
@@ -49,4 +49,6 @@ jobs:
        run: exit 1
  
      - name: Terraform Apply
-       run: terraform apply -auto-approve -input=false
+       run: |
+         terraform apply -auto-approve -input=false
+         terraform output -json | jq -r 'to_entries | map("\(.key) = \"\(.value.value)\"") | .[]' > tf-output.auto.tfvars
