--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -52,3 +52,9 @@ jobs:
        run: |
          terraform apply -auto-approve -input=false
          terraform output -json | jq -r 'to_entries | map("\(.key) = \"\(.value.value)\"") | .[]' > tf-output.auto.tfvars
+     
+     - name: Upload tfvars
+       uses: actions/upload-artifact@v4
+       with:
+         name: tf-output
+         path: tf-output.auto.tfvars
