--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -22,7 +22,7 @@ jobs:
        run: |
          echo "${{ secrets.EC2_KEY_PAIR }}" > key.pem
          chmod 400 key.pem
- 
+     
      - name: Setup Terraform with specified version on the runner
        uses: hashicorp/setup-terraform@v2
        with:
@@ -31,5 +31,10 @@ jobs:
      - name: Terraform init
        run: terraform init 
 
+     - name: Download tfvars
+       uses: actions/download-artifact@v4
+       with:
+         name: tf-output
+     
      - name: Terraform Destroy
-       run: terraform destroy -auto-approve
+       run: terraform destroy -var-file=tf-output.auto.tfvars -auto-approve
