--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -52,19 +52,5 @@ jobs:
        run: |
          terraform apply -auto-approve -input=false
          terraform output -json > tf-output.json
-         jq -r '
-          to_entries[] |
-          "\(.key) = \(if (.value.value | type == "string") then
-                         "\"\(.value.value)\""
-                       elif (.value.value | type == "array") or (.value.value | type == "object") then
-                         "\(.value.value | @json)"
-                       else
-                         .value.value
-                       end)"
-          ' tf-output.json > tf-output.auto.tfvars
+         cat tf-output.json
          
-     - name: Upload tfvars
-       uses: actions/upload-artifact@v4
-       with:
-         name: tf-output
-         path: tf-output.auto.tfvars
