--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -57,5 +57,29 @@ jobs:
      - name: Upload tfvars as artifact
        uses: actions/upload-artifact@v4
        with:
-         name: tfvars-output
-         path: tf-output.auto.tfvars                  
+         name: tf-output
+         path: tf-output.auto.tfvars     
+
+ destroy:
+  runs-on: ubuntu-latest
+  needs: terraform
+  if: failure()  
+  steps:
+    - name: Checkout the repository to the runner
+      uses: actions/checkout@v2
+
+    - name: Setup Terraform with specified version on the runner
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.3.0
+    
+    - name: Terraform init
+      run: terraform init 
+
+    - name: Download tfvars
+      uses: actions/download-artifact@v4
+      with:
+        name: tf-output
+    
+    - name: Terraform Destroy
+      run: terraform destroy -var-file=tf-output.auto.tfvars -auto-approve
